crates/parsing/tests/snapshots/parser__instance_constraints.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..149
      ModuleHeader@0..32
        MODULE@0..6 "module"
        ModuleName@6..26
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..26 "InstanceConstraints"
        Annotation@26..27
          TEXT@26..27 " "
        WHERE@27..32 "where"
      LAYOUT_START@32..32 ""
      ModuleImports@32..32
      ModuleStatements@32..148
        InstanceChain@32..148
          InstanceDeclaration@32..79
            Annotation@32..34
              TEXT@32..34 "\n\n"
            INSTANCE@34..42 "instance"
            InstanceConstraints@42..57
              TypeApplicationChain@42..54
                TypeConstructor@42..52
                  QualifiedName@42..52
                    Annotation@42..43
                      TEXT@42..43 " "
                    UPPER@43..52 "Serialise"
                TypeVariable@52..54
                  Annotation@52..53
                    TEXT@52..53 " "
                  LOWER@53..54 "a"
              Annotation@54..55
                TEXT@54..55 " "
              RIGHT_THICK_ARROW@55..57 "=>"
            InstanceHead@57..79
              QualifiedName@57..67
                Annotation@57..58
                  TEXT@57..58 " "
                UPPER@58..67 "Serialise"
              TypeVariable@67..69
                Annotation@67..68
                  TEXT@67..68 " "
                LOWER@68..69 "s"
              TypeParenthesized@69..79
                Annotation@69..70
                  TEXT@69..70 " "
                LEFT_PARENTHESIS@70..71 "("
                TypeApplicationChain@71..78
                  TypeConstructor@71..76
                    QualifiedName@71..76
                      UPPER@71..76 "Array"
                  TypeVariable@76..78
                    Annotation@76..77
                      TEXT@76..77 " "
                    LOWER@77..78 "a"
                RIGHT_PARENTHESIS@78..79 ")"
          InstanceDeclaration@79..148
            Annotation@79..80
              TEXT@79..80 "\n"
            ELSE@80..84 "else"
            Annotation@84..85
              TEXT@84..85 " "
            INSTANCE@85..93 "instance"
            InstanceConstraints@93..123
              Annotation@93..94
                TEXT@93..94 " "
              LEFT_PARENTHESIS@94..95 "("
              TypeApplicationChain@95..106
                TypeConstructor@95..104
                  QualifiedName@95..104
                    UPPER@95..104 "Serialise"
                TypeVariable@104..106
                  Annotation@104..105
                    TEXT@104..105 " "
                  LOWER@105..106 "a"
              COMMA@106..107 ","
              TypeApplicationChain@107..119
                TypeConstructor@107..117
                  QualifiedName@107..117
                    Annotation@107..108
                      TEXT@107..108 " "
                    UPPER@108..117 "Serialise"
                TypeVariable@117..119
                  Annotation@117..118
                    TEXT@117..118 " "
                  LOWER@118..119 "b"
              RIGHT_PARENTHESIS@119..120 ")"
              Annotation@120..121
                TEXT@120..121 " "
              RIGHT_THICK_ARROW@121..123 "=>"
            InstanceHead@123..148
              QualifiedName@123..133
                Annotation@123..124
                  TEXT@123..124 " "
                UPPER@124..133 "Serialise"
              TypeVariable@133..135
                Annotation@133..134
                  TEXT@133..134 " "
                LOWER@134..135 "s"
              TypeParenthesized@135..148
                Annotation@135..136
                  TEXT@135..136 " "
                LEFT_PARENTHESIS@136..137 "("
                TypeApplicationChain@137..147
                  TypeConstructor@137..143
                    QualifiedName@137..143
                      UPPER@137..143 "Either"
                  TypeVariable@143..145
                    Annotation@143..144
                      TEXT@143..144 " "
                    LOWER@144..145 "a"
                  TypeVariable@145..147
                    Annotation@145..146
                      TEXT@145..146 " "
                    LOWER@146..147 "b"
                RIGHT_PARENTHESIS@147..148 ")"
      LAYOUT_END@148..148 ""
      Annotation@148..149
        TEXT@148..149 "\n"
      END_OF_FILE@149..149 ""
    ,
    [],
)
