crates/parsing/tests/snapshots/parser__instance_declaration.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..171
      ModuleHeader@0..32
        MODULE@0..6 "module"
        ModuleName@6..26
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..26 "InstanceDeclaration"
        ExportList@26..26
        Annotation@26..27
          TEXT@26..27 " "
        WHERE@27..32 "where"
      LAYOUT_START@32..32 ""
      ModuleImports@32..32
      ModuleStatements@32..170
        InstanceChain@32..170
          InstanceDeclaration@32..170
            Annotation@32..34
              TEXT@32..34 "\n\n"
            INSTANCE@34..42 "instance"
            InstanceHead@42..56
              Annotation@42..43
                TEXT@42..43 " "
              UPPER@43..50 "Functor"
              TypeConstructor@50..56
                QualifiedName@50..56
                  Annotation@50..51
                    TEXT@50..51 " "
                  UPPER@51..56 "Maybe"
            Annotation@56..57
              TEXT@56..57 " "
            WHERE@57..62 "where"
            InstanceStatements@62..170
              LAYOUT_START@62..62 ""
              InstanceSignatureStatement@62..114
                Annotation@62..65
                  TEXT@62..65 "\n  "
                LOWER@65..68 "map"
                Annotation@68..69
                  TEXT@68..69 " "
                DOUBLE_COLON@69..71 "::"
                TypeForall@71..114
                  Annotation@71..72
                    TEXT@71..72 " "
                  FORALL@72..78 "forall"
                  TypeVariableBinding@78..80
                    Annotation@78..79
                      TEXT@78..79 " "
                    LOWER@79..80 "a"
                  TypeVariableBinding@80..82
                    Annotation@80..81
                      TEXT@80..81 " "
                    LOWER@81..82 "b"
                  PERIOD@82..83 "."
                  TypeArrow@83..114
                    TypeParenthesized@83..92
                      Annotation@83..84
                        TEXT@83..84 " "
                      LEFT_PARENTHESIS@84..85 "("
                      TypeArrow@85..91
                        TypeVariable@85..86
                          LOWER@85..86 "a"
                        Annotation@86..87
                          TEXT@86..87 " "
                        RIGHT_ARROW@87..89 "->"
                        TypeVariable@89..91
                          Annotation@89..90
                            TEXT@89..90 " "
                          LOWER@90..91 "b"
                      RIGHT_PARENTHESIS@91..92 ")"
                    Annotation@92..93
                      TEXT@92..93 " "
                    RIGHT_ARROW@93..95 "->"
                    TypeArrow@95..114
                      TypeApplicationChain@95..103
                        TypeConstructor@95..101
                          QualifiedName@95..101
                            Annotation@95..96
                              TEXT@95..96 " "
                            UPPER@96..101 "Maybe"
                        TypeVariable@101..103
                          Annotation@101..102
                            TEXT@101..102 " "
                          LOWER@102..103 "a"
                      Annotation@103..104
                        TEXT@103..104 " "
                      RIGHT_ARROW@104..106 "->"
                      TypeApplicationChain@106..114
                        TypeConstructor@106..112
                          QualifiedName@106..112
                            Annotation@106..107
                              TEXT@106..107 " "
                            UPPER@107..112 "Maybe"
                        TypeVariable@112..114
                          Annotation@112..113
                            TEXT@112..113 " "
                          LOWER@113..114 "b"
              LAYOUT_SEPARATOR@114..114 ""
              InstanceEquationStatement@114..144
                Annotation@114..117
                  TEXT@114..117 "\n  "
                LOWER@117..120 "map"
                FunctionBinders@120..131
                  BinderVariable@120..122
                    Annotation@120..121
                      TEXT@120..121 " "
                    LOWER@121..122 "f"
                  BinderParenthesized@122..131
                    Annotation@122..123
                      TEXT@122..123 " "
                    LEFT_PARENTHESIS@123..124 "("
                    BinderConstructor@124..130
                      QualifiedName@124..128
                        UPPER@124..128 "Just"
                      BinderVariable@128..130
                        Annotation@128..129
                          TEXT@128..129 " "
                        LOWER@129..130 "a"
                    RIGHT_PARENTHESIS@130..131 ")"
                Unconditional@131..144
                  Annotation@131..132
                    TEXT@131..132 " "
                  EQUAL@132..133 "="
                  WhereExpression@133..144
                    ExpressionApplicationChain@133..144
                      ExpressionConstructor@133..138
                        QualifiedName@133..138
                          Annotation@133..134
                            TEXT@133..134 " "
                          UPPER@134..138 "Just"
                      ExpressionTermArgument@138..144
                        ExpressionParenthesized@138..144
                          Annotation@138..139
                            TEXT@138..139 " "
                          LEFT_PARENTHESIS@139..140 "("
                          ExpressionApplicationChain@140..143
                            ExpressionVariable@140..141
                              QualifiedName@140..141
                                LOWER@140..141 "f"
                            ExpressionTermArgument@141..143
                              ExpressionVariable@141..143
                                QualifiedName@141..143
                                  Annotation@141..142
                                    TEXT@141..142 " "
                                  LOWER@142..143 "a"
                          RIGHT_PARENTHESIS@143..144 ")"
              LAYOUT_SEPARATOR@144..144 ""
              InstanceEquationStatement@144..170
                Annotation@144..147
                  TEXT@144..147 "\n  "
                LOWER@147..150 "map"
                FunctionBinders@150..160
                  BinderVariable@150..152
                    Annotation@150..151
                      TEXT@150..151 " "
                    LOWER@151..152 "f"
                  BinderConstructor@152..160
                    QualifiedName@152..160
                      Annotation@152..153
                        TEXT@152..153 " "
                      UPPER@153..160 "Nothing"
                Unconditional@160..170
                  Annotation@160..161
                    TEXT@160..161 " "
                  EQUAL@161..162 "="
                  WhereExpression@162..170
                    ExpressionConstructor@162..170
                      QualifiedName@162..170
                        Annotation@162..163
                          TEXT@162..163 " "
                        UPPER@163..170 "Nothing"
              LAYOUT_END@170..170 ""
      LAYOUT_END@170..170 ""
      Annotation@170..171
        TEXT@170..171 "\n"
      END_OF_FILE@171..171 ""
    ,
    [],
)
