crates/parsing/tests/snapshots/parser__keyword_in_row_record.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..147
      ModuleHeader@0..31
        MODULE@0..6 "module"
        ModuleName@6..25
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..25 "KeywordInRowRecord"
        ModuleExportList@25..25
        Annotation@25..26
          TEXT@25..26 " "
        WHERE@26..31 "where"
      LAYOUT_START@31..31 ""
      ModuleImports@31..31
      ModuleStatements@31..146
        TypeSynonymEquation@31..62
          Annotation@31..33
            TEXT@31..33 "\n\n"
          TYPE@33..37 "type"
          Annotation@37..38
            TEXT@37..38 " "
          UPPER@38..41 "Row"
          Annotation@41..42
            TEXT@41..42 " "
          EQUAL@42..43 "="
          TypeRow@43..62
            Annotation@43..44
              TEXT@43..44 " "
            LEFT_PARENTHESIS@44..45 "("
            TypeRowItem@45..60
              LabelName@45..50
                Annotation@45..46
                  TEXT@45..46 " "
                TEXT@46..50 "type"
              Annotation@50..51
                TEXT@50..51 " "
              DOUBLE_COLON@51..53 "::"
              TypeConstructor@53..60
                QualifiedName@53..60
                  Annotation@53..54
                    TEXT@53..54 " "
                  UPPER@54..60 "String"
            Annotation@60..61
              TEXT@60..61 " "
            RIGHT_PARENTHESIS@61..62 ")"
        LAYOUT_SEPARATOR@62..62 ""
        TypeSynonymEquation@62..95
          Annotation@62..63
            TEXT@62..63 "\n"
          TYPE@63..67 "type"
          Annotation@67..68
            TEXT@67..68 " "
          UPPER@68..74 "Record"
          Annotation@74..75
            TEXT@74..75 " "
          EQUAL@75..76 "="
          TypeRecord@76..95
            Annotation@76..77
              TEXT@76..77 " "
            LEFT_CURLY@77..78 "{"
            TypeRowItem@78..93
              LabelName@78..83
                Annotation@78..79
                  TEXT@78..79 " "
                TEXT@79..83 "type"
              Annotation@83..84
                TEXT@83..84 " "
              DOUBLE_COLON@84..86 "::"
              TypeConstructor@86..93
                QualifiedName@86..93
                  Annotation@86..87
                    TEXT@86..87 " "
                  UPPER@87..93 "String"
            Annotation@93..94
              TEXT@93..94 " "
            RIGHT_CURLY@94..95 "}"
        LAYOUT_SEPARATOR@95..95 ""
        TypeSynonymEquation@95..146
          Annotation@95..97
            TEXT@95..97 "\n\n"
          TYPE@97..101 "type"
          Annotation@101..102
            TEXT@101..102 " "
          UPPER@102..106 "Role"
          Annotation@106..107
            TEXT@106..107 " "
          EQUAL@107..108 "="
          TypeRow@108..146
            Annotation@108..109
              TEXT@108..109 " "
            LEFT_PARENTHESIS@109..110 "("
            TypeRowItem@110..125
              LabelName@110..115
                Annotation@110..111
                  TEXT@110..111 " "
                TEXT@111..115 "role"
              Annotation@115..116
                TEXT@115..116 " "
              DOUBLE_COLON@116..118 "::"
              TypeConstructor@118..125
                QualifiedName@118..125
                  Annotation@118..119
                    TEXT@118..119 " "
                  UPPER@119..125 "String"
            COMMA@125..126 ","
            TypeRowItem@126..144
              LabelName@126..134
                Annotation@126..127
                  TEXT@126..127 " "
                TEXT@127..134 "nominal"
              Annotation@134..135
                TEXT@134..135 " "
              DOUBLE_COLON@135..137 "::"
              TypeConstructor@137..144
                QualifiedName@137..144
                  Annotation@137..138
                    TEXT@137..138 " "
                  UPPER@138..144 "String"
            Annotation@144..145
              TEXT@144..145 " "
            RIGHT_PARENTHESIS@145..146 ")"
      LAYOUT_END@146..146 ""
      Annotation@146..147
        TEXT@146..147 "\n"
      END_OF_FILE@147..147 ""
    ,
    [],
)
