crates/parsing/tests/snapshots/parser__module_export_data_item_empty.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..48
      ModuleHeader@0..47
        MODULE@0..6 "module"
        ModuleName@6..32
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..32 "ModuleExportDataItemE ..."
        ExportList@32..41
          Annotation@32..33
            TEXT@32..33 " "
          LEFT_PARENTHESIS@33..34 "("
          ExportType@34..40
            UPPER@34..38 "List"
            TypeItemsList@38..40
              LEFT_PARENTHESIS@38..39 "("
              RIGHT_PARENTHESIS@39..40 ")"
          RIGHT_PARENTHESIS@40..41 ")"
        Annotation@41..42
          TEXT@41..42 " "
        WHERE@42..47 "where"
      LAYOUT_START@47..47 ""
      ModuleImports@47..47
      ModuleStatements@47..47
      LAYOUT_END@47..47 ""
      Annotation@47..48
        TEXT@47..48 "\n"
      END_OF_FILE@48..48 ""
    ,
    [],
)
