crates/parsing/tests/snapshots/parser__module_export_operator.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..40
      ModuleHeader@0..40
        MODULE@0..6 "module"
        Comment@6..7
          WHITESPACE@6..7 " "
        ModuleName@7..28
          UPPER@7..27 "ModuleExportOperator"
          Comment@27..28
            WHITESPACE@27..28 " "
        ModuleExportList@28..34
          LEFT_PARENTHESIS@28..29 "("
          ModuleExportOperator@29..32
            OPERATOR_NAME@29..32 "(+)"
          RIGHT_PARENTHESIS@32..33 ")"
          Comment@33..34
            WHITESPACE@33..34 " "
        WHERE@34..39 "where"
        Comment@39..40
          WHITESPACE@39..40 "\n"
      LAYOUT_START@40..40 ""
      ModuleImports@40..40
      ModuleStatements@40..40
      LAYOUT_END@40..40 ""
      END_OF_FILE@40..40 ""
    ,
    [],
)
